# IVA-Prime

./: .gcloudignore  .gitignore  CNAME  Dockerfile  app.yaml  codeFromNEB.js  contextMenu.js  createPrimers.js  customSearch.js  docker-compose-deploy.yml  docker-compose.yml  getComplementaryStand.js  getTM.js  importPlasmid.js  importSubcloningPlasmid.js  index.html  insertionPopUpWindow.js  mutationPopUpWindow.js  paragraphSelector.js  parsePlasmidFile.js  parseSnapGeneFile.js  rcl.code-profile  readme.md  requirements.txt  script.js  scrollToAnnotation.js  sequenceContextMenu.js  sequenceCursor.js  styles.css  tableHover.js  tableSelection.js  useful commands.txt
.github/actions/prepare-release/: action.yml
.github/actions/rename-and-upload-artifacts/: action.yml
.github/actions/setup-runner/: action.yml
.github/workflows/: gcp-deploy-staging.yml  gcp.yml  gcp_old.yml  tauri-cross-buid.yml
.github/workflows/steps/: setup_python.yml
app/app/: settings.py  urls.py
app/ivaprime/: views.py
docker/: Dockerfile  app.staging.yaml  app.yaml  docker-compose-deploy.yml  docker-compose.yml  requirements.txt
docker/app/: db.sqlite3
docker/app/app/: settings.py  (+1 more)
js/: createPrimers.js  customSearch.js  editFeatures.js  featureLabel.js  getTM.js  globalVariables.js  hideableWindows.js  importPlasmid.js  importSubcloningPlasmid.js  infoWindow.js  insertionPopUpWindow.js  mutationPopUpWindow.js  parsePlasmidFile.js  parseSnapGeneFile.js  resizeContents.js  scrollToAnnotation.js  sequenceContextMenu.js  sequenceCursor.js  settingsWindow.js  tableHover.js  tableSelection.js
static/: codonWeights.json  commonFeatures.json  createPrimers.js  dnaFillerBytes.txt  editFeatures.js  getTM.js  globalVariables.js  hideableWindows.js  importPlasmid.js  pET-28 a (+) primers.xlsx  styles.css  styles_old.css  tableHover.js  tableSelection.js
static/css/: styles.css
static/files/: MicrosynthUploadFormDNA.xlsx
static/js/: alerts.js  contextMenu.js  createPrimers.js  customSearch.js  editFeatures.js  errorHandler.js  featuresTable.js  fileIO.js  getTM.js  globalVariables.js  hideableWindows.js  importPlasmid.js  insertionPopUpWindow.js  keyboardShortcuts.js  modals.js  nucleotides.js  plasmidTabs.js  plasmidViewer.js  plasmids.js  popupWindows.js  primers.js  resizeContents.js  scrollToAnnotation.js  search.js  sequenceContextMenu.js  sequenceCursor.js  session.js  sidebar.js  tableHover.js  tableSelection.js  toolbar.js  userPreferences.js  utilities.js
static/js_old/: customSearch.js  editFeatures.js  getTM.js  hideableWindows.js  insertionPopUpWindow.js  resizeContents.js  sequenceContextMenu.js  tableSelection.js  warningPopUp.js
static/plasmids/: pET-28a(+).dna
tauri/: package-lock.json
tauri/iva-prime/: .gitignore  clone_from_django.py  package-lock.json  package.json  prepare_tauri_assets.py
tauri/iva-prime/src-tauri/: 2  Cargo.toml  iva-prime-mime.xml  tauri.conf.json
tauri/iva-prime/src-tauri/capabilities/: default.json
tauri/iva-prime/src-tauri/icons/: icon.icns
tauri/iva-prime/src-tauri/scripts/: postinst  postinst_deb  postinst_rpm  prerm
tauri/iva-prime/src-tauri/src/: lib.rs  main.rs
tauri/iva-prime/src-tauri/windows/fragments/: file_associations.wxs
(+102 files in other folders)
