 [package]
name = "iva-prime"
version = "1.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iva_prime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-single-instance = "2"
tokio = { version = "1.38", features = ["time", "rt"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
url = "2.2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" } # Fix PATH environment on macos aarch64
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2.4.0"
windows = { version = "0.56", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }
tauri-plugin-deep-link = "2.4.0"
log = "0.4"
tauri-plugin-log = "2.6.0"
once_cell = "1.19"

