[package]
name = "iva-prime"
version = "1.1.1"
description = "A free, cross-platform, and open-source app to edit plasmid files and automatically generate primers for IVA (In Vivo Assembly) cloning."
authors = ["Radu Cristian Leonte"]
homepage = "https://ivaprime.com"
repository = "https://github.com/RaduLeonte/IVA-Prime"
license = "GPL-3.0"
keywords = ["IVA", "cloning", "primers", "plasmid", "editor", "biology"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iva_prime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1.38", features = ["time", "rt"] }
once_cell = "1.19"
dirs = "5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"

chrono = "0.4"
fern = { version = "0.6", features = ["colored"] }

tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2.6.0"
tauri-plugin-store = "2.1"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2.4.0"

url = "2.2"
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
